--- a/promotool/app/style.css
+++ b/promotool/app/style.css
@@ -36,6 +36,8 @@ body {
     background-color: lightgray;
     font-family: 'Ubuntu Mono';
     font-size: 16px;
+    min-width: 50%;
+    max-width: 50%;
 }
 
 .promotions-view {
@@ -44,7 +46,8 @@ body {
     font-family: 'Ubuntu Mono';
     font-size: 16px;
     padding-left: 20px;
-    /* overflow: scroll; */
+    min-width: 50%;
+    max-width: 50%;
 }
 
 .controls-menu > button {
